webapl-17/k8s-yaml/mysql-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql        ## この名前がk8s内のDNS名として登録されます。
  labels:
    app: mysql-sts
spec:
  ports:
  - port: 3306
    name: mysql
  clusterIP: None    ## 特徴① ヘッドレスサービスを設定
  selector:
    app: mysql-sts   ## 後続のステートフルセットと関連づけるラベル
---
## MySQL ステートフルセット
#
apiVersion: apps/v1         ## 表1 ステートフルセット参照
kind: StatefulSet
metadata:
  name: mysql
spec:                       ## 表2 ステートフルセットの仕様
  serviceName: mysql        ## 特徴② 連携するサービス名を設定
  replicas: 1               ## ポッド起動数
  selector:
    matchLabels:
      app: mysql-sts
  template:                 ## 表3 ポッドテンプレートの仕様
    metadata:
      labels:
        app: mysql-sts
    spec:
      containers:           
      - name: mysql
        image: mysql:5.7    ## Docker Hub MySQLリポジトリを指定
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:       ## 特徴③コンテナ上のマウントポイント設定
        - name: mysql-cnf
          mountPath: /etc/mysql/mysql.conf.d
        - name: data
          mountPath: /var/lib/mysql
          subPath: data     ## 初期化時に空ディレクトリが必要なため
        livenessProbe:      ## MySQL稼働チェック
          exec:
            command: ["mysqladmin","-p$MYSQL_ROOT_PASSWORD","ping"]
          initialDelaySeconds: 60
          timeoutSeconds: 10
      volumes:
      - name: mysql-cnf
        configMap:
          name: mysql-config
          
  volumeClaimTemplates:     ## 特徴④ボリューム要求テンプレート
  - metadata:
      name: data
    spec:                   ## 表4 永続ボリューム要求の雛形
      accessModes: [ "ReadWriteOnce" ]   # RBDの時は、１ポッド限定
      storageClassName: csi-rbd-sc
      resources:
        requests:
          storage: 2Gi
