webapl-17/k8s-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapl-17
  labels:
    app: webapl-17
spec:
  #type: LoadBalancer  
  ports:
  - name: http    
    port: 8080
    targetPort: 8080
    protocol: TCP    
  selector:
    app: webapl-17
